Add api endpoint to retrieve a tour to the documentation
